[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-basic-processes"
version = "0.1.0"
description = "Reusable, composite-agnostic process-bigraph processes — Clock, Intervention, MathExpression, and beyond"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "process-bigraph>=1.4.12",
    "bigraph-schema",
    "sympy",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pbg_basic_processes*"]
